# flask-code-generator

./: LICENSE  Makefile  README.md  env.py  main.py  models.py  pyproject.toml  script.py  setup.py
sample_models/: __init__.py  models.py
src/: code_generator.py  models.py  org_service.py  script.py  user_service.py
src/code_generator/: __main__.py  code_generator.py  constant_generator.py  constants.py  controller_generator.py  crud_generator.py  database_generator.py  database_model.py  exception_generator.py  flask_server_generator.py  helper.py  project_generator.py  repo_generator.py  service_generator.py
src/database/: models.py
src/flask_code_generator/: __main__.py  constant_generator.py  constants.py  controller_generator.py  crud_generator.py  database_generator.py  database_model.py  database_script_generator.py  exception_generator.py  flask_server_generator.py  helper.py  project_generator.py  repo_generator.py  service_generator.py
