[project]
name = "flask-code-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "setuptools>=80.8.0",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
